Added some css styles

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Recipes?!</title>
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
+        <p>Balls test</p>
         <h1>Odin Recipes!</h1>
         <ul>
-            <li><a href="./odin-recipes/pizza.html">Pepperoni pizza</a></li>
-            <li><a href="./odin-recipes/fettuccinie.html">Fettuccine alfredo</a></li>
-            <li><a href="./odin-recipes/carbonara.html">Pasta Carbonara</a></li>
+            <button class="bondo"><li class="bondo"><a href="./odin-recipes/pizza.html">Pepperoni pizza</a></li></button>
+            <button class="bondo"><li class="bondo"><a href="./odin-recipes/fettuccinie.html">Fettuccine alfredo</a></li></button>
+            <button class="bondo"><li class="bondo"><a href="./odin-recipes/carbonara.html">Pasta Carbonara</a></li></button>
         </ul>
+        
     </body>
 </html>
