--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <p>Balls test</p>
         <h1>Odin Recipes!</h1>
         <ul>
             <button class="bondo"><li class="bondo"><a href="./odin-recipes/pizza.html">Pepperoni pizza</a></li></button>
             <button class="bondo"><li class="bondo"><a href="./odin-recipes/fettuccinie.html">Fettuccine alfredo</a></li></button>
             <button class="bondo"><li class="bondo"><a href="./odin-recipes/carbonara.html">Pasta Carbonara</a></li></button>
         </ul>
-        
+        <h3>For best experience zoom in to around 250-400%</h3>
     </body>
 </html>
